# NDP

./: .gitignore  CHANGELOG.md  Diagrams.graffle  LICENSE  NDP.cabal  NDP.config  NDP.dhall  README.md  README.org  Readme.org  Vagrantfile  package.yaml  stack.yaml  vanity  vanity.sh
entities/: projects.dhall
entities/HamsterMinimalDVID/: Config.hs  Constraints.hs  HamsterMinimalDVID.vhdl  Main.hs  simple_dvid.vhdl  vga_gen.vhdl
entities/MinimalDVIDPlusTMDS/: Config.hs  Main.hs  simple_dvid.vhdl
entities/PopCountTest/: Config.hs  Main.hs
entities/PrimitiveTest/: Main.hs
entities/PureClashTest/: Config.hs  Main.hs
entities/SDCardTest/: Config.hs  Main.hs
entities/VideoDemos/: HamsterDVIDPlusTMDS.vhdl  Main.hs  project.dhall
executable/: Constraints.hs
executable/Constraints/: Pipistrello.hs
executable/Dhall/: Config.hs  Hardware.hs
executable/Make/: Clash.hs  Command.hs  Config.hs  GHDL.hs  HDL.hs  Main.hs  Oracles.hs  PPM.hs  PrimaryTargets.hs  Shortcuts.hs  TileROM.hs  Utils.hs  Vagrant.hs
executable/Make/Command/: Clash.hs  Common.hs  FPGA.hs  Xilinx.hs
executable/Make/Dhall/: Config.hs  Hardware.hs
executable/Make/Xilinx/: Constraints.hs  XFlow.hs
executable/ROM/: Tiles.hs
executable/ROM/Tiles/: Map.hs  Y.pbm  colon.pbm  lbrack.pbm
hardware/: Primitive.hs
hardware/ADB Interface/: ADB Interface.pro  ADB Interface.sch
hardware/Libraries/: ndp.lib
hardware/NDP/: Clocking.hs  Signal.hs  Utils.hs
hardware/Primitive/: ClockStrobe.hs
hardware/Resources/: Constraints.hs  PipistrelloConstraints.hs
hardware/Xilinx/: Primitive.hs
pcbs/ADB Interface/: ADB Interface.kicad_pcb  ADB Interface.net  ADB Interface.sch
pcbs/Front Panel/: Front Panel.pro  Front Panel.sch
rom/: tiles.dhall
rom/tiles/: itscii-bitscii.dhall
src/Make/: Clash.hs  Command.hs  Config.hs  GHDL.hs  HDL.hs  Main.hs  Oracles.hs  PPM.hs  Pipistrello.hs  PrimaryTargets.hs  Shortcuts.hs  TileROM.hs  Utils.hs  Vagrant.hs  Xilinx.hs
src/NDP/: CBMColor.hs  Clocking.hs  HDMIGenerator.hs  PixelGenerator.hs  Signal.hs  TMDS.hs  Utils.hs  VideoGenerator.hs  VideoTiming.hs
src/Resources/: PipistrelloConstraints.hs
src/Test/: CLaSHTests.hs  TMDSTests.hs
src/Tests/: ALU.hs  CLaSH.hs  Main.hs  TMDS.hs
src/clash/: TMDS.hs  Utils.hs
src/make-ndp/: BuildUtils.hs  Clash.hs  Config.hs  Main.hs  Oracles.hs  TileROM.hs  Utils.hs
src/vhdl/: SDCard.vhdl
src/xilinx/: pipistrello_v2.02.ucf
test-suite/: CLaSH.hs  Main.hs  TMDS.hs
test-suite/NDP/: Tests.hs
(+183 files in other folders)
