name:                NDP
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dented42/NDP#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Eyzaguirre
maintainer:          matias@fortlogic.net
copyright:           2016
category:            hardware
build-type:          Simple
cabal-version:       >=1.10

executable ndp
  hs-source-dirs:      src
  main-is:             Make/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.6.0 && < 1,
                       clash-prelude >= 0.11.1 && < 0.12,
                       conf >= 0.1.1.0 && < 0.2.0.0,
                       directory >= 1.2.2.0 && < 2,
                       formatting >= 6.2.2 && < 7,
                       hspec >= 2.2.3 && < 3,
                       netpbm >= 1.0.2 && < 2.0,
                       posix-escape >= 0.1 && < 1,
                       QuickCheck >= 2.8.2 && < 3,
                       safe-globals >= 0.1.3 && < 1,
                       shake >= 0.15.10 && < 0.16,
                       temporary >= 1.2.0.4 && < 2,
                       unordered-containers >= 0.2.7.1,
                       vector >= 0.11.0.0

